<resources>
    <string name="app_name">qsearcher</string>
    <string name="tv_shows_most_popular">Most popular events</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="read_more">Узнать больше</string>
    <string name="read_less">Скрыть</string>
    <string name="website">Перейти на сайт</string>
    <string name="favorites">Избранное</string>
    <string name="search_event">Поиск события</string>
    <string name="chat">Сообщения</string>
    <string name="your_email">Ваша почта</string>
    <string name="registration">Регистрация</string>
    <string name="tap_to_log_in">Нажмите, чтобы войти</string>
    <string name="repeat_your_password">Повторите ваш пароль</string>
    <string name="users">Пользователи</string>
    <string name="message">Сообщение</string>
    <string name="user_name">Имя пользователя</string>
    <string name="programmer">Программист</string>
    <string name="city">Москва</string>
    <string name="user_email">aapetropavlovskiy@edu.hse.ru</string>
    <string name="new_events">Новые события</string>
</resources>